--- a/Steam(wpf)/page/profilePage.xaml
+++ b/Steam(wpf)/page/profilePage.xaml
@@ -5,10 +5,57 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Steam_wpf_"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="600" d:DesignWidth="1150"
       Title="profilePage">
+    
+    <ScrollViewer>
+        <Grid Margin="200 0 200 0" Background="#22232F">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="7*"/>
+            </Grid.RowDefinitions>
 
-    <Grid>
-        <Label Content="profile" Foreground="White"/>
-    </Grid>
+            <StackPanel Grid.Row="0" Orientation="Horizontal">
+                <Image Width="200" Height="200" Margin="10" Name="userImageI"/>
+                <StackPanel>
+                    <TextBlock Name="userNicknameTB" Foreground="White" FontSize="26" Margin="0 20 0 0"/>
+                    <TextBlock Name="userFIOTB" Margin="0 5 0 0" FontSize="12" Foreground="#C4C4C4"/>
+                    <TextBlock Name="gamesCountTB" Foreground="#C4C4C4" FontSize="12" Margin="0 5 0 80"/>
+                </StackPanel>
+                <Button Content="Редактировать профиль" Style="{StaticResource buttons}" Name="updateProfileBTN" Click="updateProfileBTN_Click" Width="180" Margin="220 0 0 0" VerticalAlignment="Bottom"/>
+            </StackPanel>
+
+            <StackPanel Grid.Row="1">
+                <TextBlock Text="Коллекция игр" Foreground="White" Margin="10 4 4 0" FontSize="15"/>
+                <ListView  Background="Transparent" BorderThickness="0" Name="userGameCollectionLV" SelectionChanged="userGameCollectionLV_SelectionChanged">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel/>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Height="86">
+                                <Grid Margin="2 4 2 4">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="3*"/>
+                                        <ColumnDefinition Width="7*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <Image Width="200" Height="80" Grid.Column="0" Name="gameImagei" Uid="{Binding idGame}" Loaded="gameImagei_Loaded"/>
+
+                                    <StackPanel Grid.Column="1">
+                                        <TextBlock Name="gameNameTB" Text="{Binding games.gameName}" Foreground="White" FontSize="18" Margin="0 5 0 0"/>
+                                        <TextBlock Name="playedTime" Loaded="playedTime_Loaded" Uid="{Binding idGame}" Foreground="#C4C4C4" FontSize="13" Margin="0 5 0 0"/>
+                                    </StackPanel>
+                                    
+                                </Grid>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+
+        </Grid>
+    </ScrollViewer>
 </Page>
