--- a/Steam(wpf)/page/profilePage.xaml
+++ b/Steam(wpf)/page/profilePage.xaml
@@ -16,7 +16,10 @@
             </Grid.RowDefinitions>
 
             <StackPanel Grid.Row="0" Orientation="Horizontal">
-                <Image Width="200" Height="200" Margin="10" Name="userImageI"/>
+                <StackPanel>
+                    <Image Width="200" Height="200" Margin="10" Name="userImageI"/>
+                    <Button Style="{StaticResource buttons}" Content="Открыть галерею" Name="openGalery" Click="openGalery_Click"/>
+                </StackPanel>
                 <StackPanel>
                     <TextBlock Name="userNicknameTB" Foreground="White" FontSize="26" Margin="0 20 0 0"/>
                     <TextBlock Name="userFIOTB" Margin="0 5 0 0" FontSize="12" Foreground="#C4C4C4"/>
