--- a/Steam(wpf)/page/storePage.xaml
+++ b/Steam(wpf)/page/storePage.xaml
@@ -21,69 +21,73 @@
             </Grid.RowDefinitions>
 
             <StackPanel Orientation="Horizontal" Grid.Row="0" Background="#101822" Margin="8">
-                <TextBox Style="{StaticResource storeTextBoxes}" Width="400" Margin="10 0 10 0" Name="searchTB"/>
+                <TextBox Style="{StaticResource storeTextBoxes}" Width="300" Margin="10 0 10 0" Name="searchTB"/>
                 <Button Style="{StaticResource storeButtons}" Content="Поиск" Width="60" Name="searchBTN" Click="searchBTN_Click"/>
-                <ComboBox Name="orderCB" Height="24" Margin="10 0 10 0" SelectionChanged="orderCB_SelectionChanged">
+                <ComboBox Name="orderCB" Height="24" Margin="10 0 0 0" SelectionChanged="orderCB_SelectionChanged">
                     <ComboBoxItem>Все записи</ComboBoxItem>
                     <ComboBoxItem>По убыванию</ComboBoxItem>
                     <ComboBoxItem>По возрастанию</ComboBoxItem>
                 </ComboBox>
-                <ComboBox Name="fieldCB" Height="24" SelectedIndex="0">
+                <ComboBox Name="fieldCB" Height="24" SelectedIndex="0" Margin="10 0 0 0">
                     <ComboBoxItem>Названия</ComboBoxItem>
                     <ComboBoxItem>Цены</ComboBoxItem>
                     <ComboBoxItem>Даты</ComboBoxItem>
                 </ComboBox>
+                <CheckBox Name="withDiscountCB" Content="Скидка" Foreground="White" VerticalAlignment="Center" Margin="10 0 0 0"/>
             </StackPanel>
 
-            <ListView Name="gamesLV" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.Row="1" Background="Transparent" BorderBrush="Transparent" SelectionChanged="gamesLV_SelectionChanged">
-                <ListView.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel HorizontalAlignment="Stretch" Width="auto" Orientation="Vertical" />
-                    </ItemsPanelTemplate>
-                </ListView.ItemsPanel>
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Height="80" HorizontalAlignment="Stretch" Background="#16202D" Width="807 ">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="2*"/>
-                                    <ColumnDefinition Width="8*"/>
-                                </Grid.ColumnDefinitions>
+            <StackPanel Grid.Row="1">
+                <TextBlock Name="searchResultTB" Foreground="White" FontSize="12" Margin="10 0 0 0"/>
+                <ListView Name="gamesLV" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.Row="1" Background="Transparent" BorderBrush="Transparent" SelectionChanged="gamesLV_SelectionChanged">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel HorizontalAlignment="Stretch" Width="auto" Orientation="Vertical" />
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Height="80" HorizontalAlignment="Stretch" Background="#16202D" Width="807 ">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="2*"/>
+                                        <ColumnDefinition Width="8*"/>
+                                    </Grid.ColumnDefinitions>
 
-                                <Image Grid.Column="0" Name="gameImageI" Loaded="gameImageI_Loaded" Uid="{Binding idGame}"/>
+                                    <Image Grid.Column="0" Name="gameImageI" Loaded="gameImageI_Loaded" Uid="{Binding idGame}"/>
 
-                                <StackPanel Grid.Column="1">
-                                    <TextBlock Text="{Binding gameName}" Style="{StaticResource textBlockForListGameName}" Margin="7 0 0 0" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Популярные тэги: " Foreground="#C7CCC9"  Margin="10 0 0 0"/>
-                                        <ListView Name="tags4Game" Uid="{Binding idGame}" Loaded="tags4Game_Loaded" Background="Transparent" BorderThickness="0">
-                                            <ListBox.ItemContainerStyle>
-                                                <Style TargetType="ListBoxItem">
-                                                    <Setter Property="Focusable" Value="False" />
-                                                </Style>
-                                            </ListBox.ItemContainerStyle>
-                                            <ListView.ItemsPanel>
-                                                <ItemsPanelTemplate>
-                                                    <StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal"/>
-                                                </ItemsPanelTemplate>
-                                            </ListView.ItemsPanel>
-                                            <ListView.ItemTemplate>
-                                                <DataTemplate>
-                                                    <TextBlock Text="{Binding tags.tagName}"  Style="{StaticResource listViewItemsAdminPageGames}"/>
-                                                </DataTemplate>
-                                            </ListView.ItemTemplate>
-                                        </ListView>
+                                    <StackPanel Grid.Column="1">
+                                        <TextBlock Text="{Binding gameName}" Style="{StaticResource textBlockForListGameName}" Margin="7 0 0 0" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="Популярные тэги: " Foreground="#C7CCC9"  Margin="10 0 0 0"/>
+                                            <ListView Name="tags4Game" Uid="{Binding idGame}" Loaded="tags4Game_Loaded" Background="Transparent" BorderThickness="0">
+                                                <ListBox.ItemContainerStyle>
+                                                    <Style TargetType="ListBoxItem">
+                                                        <Setter Property="Focusable" Value="False" />
+                                                    </Style>
+                                                </ListBox.ItemContainerStyle>
+                                                <ListView.ItemsPanel>
+                                                    <ItemsPanelTemplate>
+                                                        <StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal"/>
+                                                    </ItemsPanelTemplate>
+                                                </ListView.ItemsPanel>
+                                                <ListView.ItemTemplate>
+                                                    <DataTemplate>
+                                                        <TextBlock Text="{Binding tags.tagName}"  Style="{StaticResource listViewItemsAdminPageGames}"/>
+                                                    </DataTemplate>
+                                                </ListView.ItemTemplate>
+                                            </ListView>
+                                        </StackPanel>
+                                        <TextBlock Text="{Binding releaseDate, ConverterCulture=ru, StringFormat={}dd MMM. yyyy}" HorizontalAlignment="Right" Style="{StaticResource textBlockForListGameDate}" VerticalAlignment="Center"/>
+                                        <TextBlock Name="gamePriceTB" Loaded="gamePriceTB_Loaded" Uid="{Binding idGame}" VerticalAlignment="Center" HorizontalAlignment="Right" Style="{StaticResource textBlockForListGamePrice}"/>
                                     </StackPanel>
-                                    <TextBlock Text="{Binding releaseDate, ConverterCulture=ru, StringFormat={}dd MMM. yyyy}" HorizontalAlignment="Right" Style="{StaticResource textBlockForListGameDate}" VerticalAlignment="Center"/>
-                                    <TextBlock Name="gamePriceTB" Loaded="gamePriceTB_Loaded" Uid="{Binding idGame}" VerticalAlignment="Center" HorizontalAlignment="Right" Style="{StaticResource textBlockForListGamePrice}"/>
-                                </StackPanel>
 
-                            </Grid>
+                                </Grid>
 
-                        </StackPanel>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
 
         </Grid>
 
