--- a/Steam(wpf)/page/storePage.xaml
+++ b/Steam(wpf)/page/storePage.xaml
@@ -38,7 +38,7 @@
 
             <StackPanel Grid.Row="1">
                 <TextBlock Name="searchResultTB" Foreground="White" FontSize="12" Margin="10 0 0 0"/>
-                <ListView Name="gamesLV" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.Row="1" Background="Transparent" BorderBrush="Transparent" SelectionChanged="gamesLV_SelectionChanged">
+                <ListView Height="570" Name="gamesLV" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.Row="1" Background="Transparent" BorderBrush="Transparent" SelectionChanged="gamesLV_SelectionChanged">
                     <ListView.ItemsPanel>
                         <ItemsPanelTemplate>
                             <StackPanel HorizontalAlignment="Stretch" Width="auto" Orientation="Vertical" />
@@ -87,6 +87,20 @@
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                    <TextBlock Text="Количество записей на странице: " Style="{StaticResource textBlocks}"/>
+                    <TextBox Style="{StaticResource textBoxes}" Width="40" TextChanged="TextBox_TextChanged" Name="pageCountTB" Margin="5 0 0 10"/>
+
+                    <TextBlock Name="txtFirst" Uid="firstOne" Text="&lt;&lt;" MouseDown="GoPage_MouseDown" Style="{StaticResource paginatorBtns}"/>
+                    <TextBlock Name="txtPrev" Uid="prev" Text="&lt;" MouseDown="GoPage_MouseDown" Style="{StaticResource paginatorBtns}"/>
+                    <TextBlock Name="txt1" Uid="1" Text="{Binding  Path = NPage[0]}" Style="{StaticResource paginatorBtns}" Visibility="{Binding Visible[0]}" FontWeight="{Binding Bold[0]}" MouseDown="GoPage_MouseDown"/>
+                    <TextBlock Name="txt2" Uid="2" Text="{Binding  Path = NPage[1]}" Style="{StaticResource paginatorBtns}" Visibility="{Binding Visible[1]}" FontWeight="{Binding Bold[1]}" MouseDown="GoPage_MouseDown"/>
+                    <TextBlock Name="txt3" Uid="3" Text="{Binding  Path = NPage[2]}" Style="{StaticResource paginatorBtns}" Visibility="{Binding Visible[2]}" FontWeight="{Binding Bold[2]}" MouseDown="GoPage_MouseDown"/>
+                    <TextBlock Name="txt4" Uid="4" Text="{Binding  Path = NPage[3]}" Style="{StaticResource paginatorBtns}" Visibility="{Binding Visible[3]}" FontWeight="{Binding Bold[3]}" MouseDown="GoPage_MouseDown"/>
+                    <TextBlock Name="txt5" Uid="5" Text="{Binding  Path = NPage[4]}" Style="{StaticResource paginatorBtns}" Visibility="{Binding Visible[4]}" FontWeight="{Binding Bold[4]}" MouseDown="GoPage_MouseDown"/>
+                    <TextBlock Name="txtNext" Uid="next" Text="&gt;" MouseDown="GoPage_MouseDown" Style="{StaticResource paginatorBtns}"/>
+                    <TextBlock Name="txtLast" Uid="lastOne" Text="&gt;&gt;" MouseDown="GoPage_MouseDown" Style="{StaticResource paginatorBtns}"/>
+                </StackPanel>
             </StackPanel>
 
         </Grid>
